[refactor] Update remaining XQuery and test support code for Java 21
Group the remaining mixed Java 21 rewrites in the XQuery engine and its focused tests into one area commit.